fixed media queries/spacing, cleaned up code

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -106,28 +106,27 @@ bottom: 0px;
 
   .homepageTitle {
     font-size: 50px;
-    margin-left: 5%;
+    margin-left: 3.5%;
   }
 
   .MainTile{
     background-color:#F7DFB8;
     width: 370px;
-    /* height: 250px; */
     margin: 3rem auto;
     padding: 15px;
     border: 3px black solid;
     border-radius: 10px;
-    /* background: #F2D4BF; */
   }
 
   #projectCard{
     width: 100%;
     display: grid;
     grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto auto auto auto;
+    grid-row-gap: 30px;
     /* grid-auto-flow: dense; */
     /* grid-gap: 20px; */
-    /* margin: 20px 28px; */
+    /* margin: 20px 20px; */
   }
 
   #projectCardTitle{
@@ -168,7 +167,7 @@ bottom: 0px;
    }
   #editAndDelBtns{
     display: inline-flex;
-
+    margin-top: 10px;
     
   }
 
@@ -190,7 +189,7 @@ bottom: 0px;
 
   .project{
     margin: auto;
-    width: 95%;
+    width: 90%;
     margin-top: 1rem;
     padding: 2rem;
     border: 1px solid black;
@@ -207,7 +206,6 @@ bottom: 0px;
     color: #FE9F00;
   }
 
-
   .icon{
     transition: .3s ease;
   }
@@ -216,35 +214,24 @@ bottom: 0px;
     cursor: pointer;
   }
 
-  .project-section1{
-    /* border: 1px solid black;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 5px auto;
-    background-color:#F7DFB8 ; */
-  }
-  .project-section2{
+  .single-project-section{
     border: 1px solid black;
+    width: 60%;
     padding: 20px;
     border-radius: 10px;
-    margin: 5px auto;
-    background-color:#F7DFB8 ;
+    margin-left: 0;
+    margin-bottom: 10px;
+    background-color:#F7DFB8;
   }
-  .project-section3{
-    border: 1px solid black;
-    padding: 20px;
-    border-radius: 10px;
-    margin: 5px auto;
-    background-color:#F7DFB8 ;
-  }
+
   .list{
-    width: 40%;
+    width: 35%;
     height: 5%;
     border: 1px solid black;
     border-radius: 10px;
     /* margin: 30px auto; */
     margin-top: 25px;
-    margin-left: 2.5%;
+    margin-left: 5%;
     background-color: #F7DFB8;
     font-size: 25px;
     padding: 20px;
@@ -321,6 +308,18 @@ bottom: 0px;
     width: 100%;
   }
 
+  .profileSection{
+    border: black 3px solid;
+    margin-bottom: 30px;
+    align-content: center;
+    background-color: #F7DFB8;
+    margin: auto;
+    width: 50%;
+    margin-top: 1rem;
+    padding: 2rem;
+    border-radius: 20px;
+  }
+
   #editProfileContainer{
     background-color: #F7DFB8;
     border: 1px solid black;
@@ -353,9 +352,15 @@ bottom: 0px;
   }
 
   
-  @media only screen and (max-width: 550px) {
+  @media only screen and (min-width: 330px) {
+    .navbarImage {
+      margin-left: 1%;
+    }  
+    .navbarItems {
+      margin-right: 2%;
+    }
     .homepageTitle {
-      font-size: 35px;
+      font-size: 33px;
       margin-right: 2%;
     }  
     .newProject_form {
@@ -364,9 +369,32 @@ bottom: 0px;
     #projectCard{
       grid-template-rows: auto;
       grid-template-columns: auto;
+      grid-row-gap: 0;
+    }
+    .project{
+      width: 95%;
+    }
+    .single-project-section{
+      width: 100%;
+    }
+    .list{
+      width: 90%;
+    }
+    .profileSection{
+      width: 95%;
+      padding: 1.5rem;
+    }
+    .textarea{
+      width: 95%;
     }
   }
   @media only screen and (min-width: 768px) {
+    .navbarImage {
+      margin-left: 3%;
+    }  
+    .navbarItems {
+      margin-right: 3%;
+    }
     .image-container {
       width: 100%;
       height: 350px;
@@ -386,9 +414,39 @@ bottom: 0px;
     #projectCard{
       grid-template-rows: auto auto;
       grid-template-columns: auto auto;
+      margin-left: auto;
+      margin-right: auto;
+      width: 98%;
+    }
+    .project{
+      width: 90%;
+    }
+    .single-project-section{
+      width: 80%;
+    }
+    .list{
+      width: 70%;
+    }
+    .profileSection{
+      width: 75%;
+      padding: 1.5rem;
+    }
+    .textarea{
+      width: 80%;
     }
   }
-  @media only screen and (min-width: 992px) {
+
+  @media only screen and (min-width: 820px) {
+    #projectCard{
+      grid-template-rows: auto auto;
+      grid-template-columns: auto auto;
+      margin-left: auto;
+      margin-right: auto;
+      width: 95%;
+    }
+  }
+
+  @media only screen and (min-width: 1150px) {
     .image-container {
       width: 100%;
       height: 500px;
@@ -409,10 +467,55 @@ bottom: 0px;
 
     #projectCard{
       grid-template-rows: auto auto auto;
-      grid-template-columns: auto auto auto auto;
+      grid-template-columns: auto auto auto;
+      margin-left: auto;
+      margin-right: auto;
+      width: 95%;
     }
-
-    
+    .single-project-section{
+      width: 60%;
+    }
+    .list{
+      width: 50%;
+    }
+    .profileSection{
+      width: 60%;
+      padding: 2rem;
+    }
+    .newProject{
+      width: 55%;
+      margin-left: auto;
+      margin-right: auto;
+    }
   }
 
-  
+  @media only screen and (min-width: 1480px) {
+    #projectCard{
+      grid-template-rows: auto auto auto;
+      grid-template-columns: auto auto auto auto;
+      margin-left: auto;
+      margin-right: auto;
+      width: 98%;
+      grid-row-gap: 30px;
+    }
+    .list{
+      width: 35%;
+    }
+    .profileSection{
+      width: 50%;
+    }
+  }
+
+  @media only screen and (min-width: 2500px) {
+    #projectCard{
+      grid-template-rows: auto auto auto;
+      grid-template-columns: auto auto auto auto auto auto;
+    }
+  }
+
+  @media only screen and (min-width: 3000px) {
+    #projectCard{
+      grid-template-rows: auto auto auto;
+      grid-template-columns: auto auto auto auto auto auto auto;
+    }
+  }
